<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ecalendar</string>
    <string name="home_page_app_name">UNKNOWN</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="goBtn">GO</string>
    <string name="person1">Cynthia</string>
    <string name="person2">Matoku</string>
    <string name="person3">Re Liang</string>
    <string name="date_view_header">Today, we have 3 holidays!</string>
    <string name="activity1">This is activity with photos.</string>
    <string name="activity2">This is summary, it may be very long, show two rows only.</string>
    <string name="activity3">Someone is visiting TKH, let\'s guess who he is.</string>
    <string name="activity4">There is a big high tea this afternoon, first come, first serve.</string>
    <string name="activity5">This is summary, too.</string>
    <string name="time1">2014-06-26 9:30</string>
    <string name="time2">2014-06-26 10:30</string>
    
    <!-- Activity Icons ContentDescription-->
    <string name="iconDescAttachmentLink">click to see pictures</string>
    <string name="iconDescCommentLink">click to see comments</string>
    
    <!-- Menu List ImageView ContentDescription-->
    <string name="iconDescMonthview">go to month view</string>
    <string name="iconDescActivitylist">go to activity list</string>
    <string name="iconDescPost">post a activity</string>
    <string name="iconDescProfile">edit user profile</string>
    <string name="iconDescMenuListViewSwitcher">click to show/hide the menu list</string>

</resources>
